# diaspec

./: .gitignore  GNUmakefile  Makefile  README.md  TODO  Test.hs  act.spec  diaspec  diaspec.cabal  example.spec  ip.spec  procpic.spec  uuagc_options  webcam.spec
example/: cam.spec
examples/: complex.spec  makead.spec  webcam.spec  whenreq.spec
expected/: AbstractCamera.java  AbstractComposeDisplay.java  AbstractDisplay.java  AbstractIP.java  AbstractMakeAd.java  AbstractProcessPicture.java  AbstractRunner.java  AbstractScreen.java
passing/: composedisplay.spec  display.spec
src/: DiaGrammar.hs  Lexer.x  Main.hs  Parser.y  Tokens.hs
src/Diaspec/: JTypeUtils.hs  Sort.hs  Types.hs
src/Diaspec/Backend/: AG.ag  GenerateJava.hs  PrintDiaspec.hs
src/Diaspec/Backend/AG/: .gitignore  Base.ag  GenJava.ag  PrintDiaspec.ag  PrintRacket.ag
src/Diaspec/Frontend/: Lexer.x  Parser.y  Tokens.hs
