-- For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                diaspec
version:             0.1.0.0
synopsis:            Simplified DiaSpec compiler
description:         DiaSpec compiler to convert simplified grammar into Java framework, Racket specs, etc.
homepage:            http://people.bordeaux.inria.fr/pwalt/
license:             GPL-3
license-file:        LICENSE
author:              Paul van der Walt
maintainer:          paul@denknerd.org
copyright:           Paul van der Walt <paul@denknerd.org>
category:            Language
build-type:          Simple
extra-source-files:  *.spec
                   , README.md
                   , uuagc_options
                   , src/Diaspec/Backend/*.ag
                   , src/Diaspec/Backend/AG/*.ag
                   , GNUmakefile
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/toothbrush/diaspec

executable diaspec
  main-is:             Main.hs
  other-modules:       Diaspec.Frontend.Lexer
                     , Diaspec.Frontend.Parser
                     , Diaspec.Backend.PrintDiaspec
                     , Diaspec.Backend.GenerateJava
                     , Diaspec.Sort
                     , Diaspec.Backend.AG
  other-extensions:    CPP
  build-depends:       base >=4.7 && <4.8, array >=0.5 && <0.6,
                       language-java >= 0.2.7, uulib,
                       cmdargs >= 0.10.12, Cabal >= 1.20.0.0,
                       uuagc, uuagc-cabal, MissingH >= 1.0.0
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
  default-extensions:  StandaloneDeriving
