-- For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                diaspec
version:             0.1.1
synopsis:            Simplified DiaSpec compiler
description:         DiaSpec compiler to convert simplified grammar into Java framework, Racket specs, etc.
homepage:            http://people.bordeaux.inria.fr/pwalt/
license:             GPL-3
license-file:        LICENSE
author:              Paul van der Walt
maintainer:          paul@denknerd.org
copyright:           Paul van der Walt <paul@denknerd.org>
category:            Language
build-type:          Simple
extra-source-files:  *.spec
                   , README.md
                   , uuagc_options
                   , src/Diaspec/Backend/*.ag
                   , src/Diaspec/Backend/AG/*.ag
                   , GNUmakefile
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/toothbrush/diaspec

executable diaspec
  main-is:             Main.hs
  other-modules:       Diaspec.Frontend.Lexer
                     , Diaspec.Frontend.Parser
                     , Diaspec.Backend.PrintDiaspec
                     , Diaspec.Backend.GenerateJava
                     , Diaspec.Backend.AG
                     , Diaspec.Sort
                     , Diaspec.JTypeUtils
  other-extensions:    CPP
  build-depends:       base >=4.7 && <4.8
                     , array >=0.5 && <0.6
                     -- this is to prevent cmdargs pulling in an old version of transformers
                     , mtl >= 2.2, transformers >= 0.4
                     -- end cmdargs hack
                     , language-java >= 0.2.7
                     , cmdargs >= 0.10.12
                     , MissingH >= 1.0.0
                     , uulib >= 0.9
                     , uuagc >= 0.9
                     , filepath
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
  -- def-exts for the benefit of AGs, which
  -- don't allow language extension specifications
  default-extensions:  StandaloneDeriving
